--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         }
     ],
     "require": {
-        "php": "^8.0 || ^8.1",
+        "php": "^8.1",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.5",
         "illuminate/contracts": "^8.0 || ^9.0 || ^10.0",
